Fix footer links spacing

--- a/src/App.css
+++ b/src/App.css
@@ -53,5 +53,6 @@ body{
 
 .links{
   display: flex;
+  width: 100%;
   justify-content: space-around;
 }
